accessibility: fix active menu item low contrast in night-mode

--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -46,6 +46,6 @@ $bg-secondary-night: #101c29;
 $bg-sidebar-night:   #101e26;
 $bg-footer-night:    #000000;
 
-$active-sidebar-night: #077CBC;
+$active-sidebar-night: #9cd7f7;
 
 $bg-search-results-night: rgba(10, 10, 10, 0.95);
